--- a/breakconnect/templates/breakconnect/reset-password.html
+++ b/breakconnect/templates/breakconnect/reset-password.html
@@ -213,7 +213,7 @@
     <input type="hidden" id="anPageName" name="page" value="reset-password" />
     <div class="container-center-horizontal">
       <div class="reset-password screen">
-        <img class="base-C61RwL" src="{% static 'breakconnect/img/base-6@1x.png' %}" />
+        <img class="base-C61RwL" src="{% static 'breakconnect/img/base@1x.png' %}" />
         <div class="component-heade-ive-header-copy-C61RwL">
           <div class="component-heade-sponsive-header-CkLYbh">
             <div class="component-heade-ponsive-trigger-tHI9HX">
@@ -236,13 +236,13 @@
         </div>
         <div class="component-form-reset-password-C61RwL">
           <div class="component-form-reset-password-YjyU4j">
-            <img class="base-H3ri59" src="{% static 'breakconnect/img/base-66@1x.png' %}" />
+            <img class="base-H3ri59" src="{% static 'breakconnect/img/base-2@1x.png' %}" />
             <div class="component-form-global-link-H3ri59">
               <div class="component-form-global-link-A8xxsz ibmplexsans-normal-steel-blue-16px">Back to Sign in</div>
             </div>
             <div class="controls-button-H3ri59 smart-layers-pointers">
               <div class="controls-button-e-accent-normal-oA7WPK">
-                <img class="base-WxnRLA" src="{% static 'breakconnect/img/base-2@1x.png' %}" />
+                <img class="base-WxnRLA" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
                 <div class="button-WxnRLA ibmplexsans-medium-aqua-haze-16px">Send Reset Link</div>
               </div>
             </div>
@@ -255,7 +255,7 @@
                 </div>
                 <div class="controls-text-field-xiMT3L">
                   <div class="controls-text-field-normal-ecttcx">
-                    <img class="base-vRwsJ7" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
+                    <img class="base-vRwsJ7" src="{% static 'breakconnect/img/base-4@1x.png' %}" />
                     <div class="placeholder-vRwsJ7 ibmplexsans-normal-cerulean-frost-16px">&nbsp;</div>
                   </div>
                 </div>
