--- a/breakconnect/templates/breakconnect/sign-in.html
+++ b/breakconnect/templates/breakconnect/sign-in.html
@@ -214,13 +214,13 @@
     <div class="container-center-horizontal">
       <div class="sign-in screen">
         <div class="component-form-place-sign-in-C61RwL">
-          <img class="base-r0SCOi" src="{% static 'breakconnect/img/base-1@1x.png' %}" />
+          <img class="base-r0SCOi" src="{% static 'breakconnect/img/base-55@1x.png' %}" />
           <div class="component-form-global-link-r0SCOi">
             <div class="component-form-global-link-tFoBe0 ibmplexsans-normal-steel-blue-16px">Forgot password?</div>
           </div>
           <div class="controls-button-r0SCOi smart-layers-pointers">
             <div class="controls-button-e-accent-normal-wG9ECl">
-              <img class="base-9ExXe4" src="{% static 'breakconnect/img/base-2@1x.png' %}" />
+              <img class="base-9ExXe4" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
               <div class="button-9ExXe4 ibmplexsans-medium-aqua-haze-16px">Sign In</div>
             </div>
           </div>
@@ -233,7 +233,7 @@
               </div>
               <div class="controls-text-field-XrNhcc">
                 <div class="controls-text-field-normal-e6shCY">
-                  <img class="base-g0kJNi" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
+                  <img class="base-g0kJNi" src="{% static 'breakconnect/img/base-4@1x.png' %}" />
                   <div class="placeholder-g0kJNi ibmplexsans-normal-cerulean-frost-16px">&nbsp;</div>
                 </div>
               </div>
@@ -248,7 +248,7 @@
               </div>
               <div class="controls-text-field-s7Reux">
                 <div class="controls-text-field-normal-fHxm8M">
-                  <img class="base-HVzydu" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
+                  <img class="base-HVzydu" src="{% static 'breakconnect/img/base-4@1x.png' %}" />
                   <div class="placeholder-HVzydu ibmplexsans-normal-cerulean-frost-16px">&nbsp;</div>
                 </div>
               </div>
@@ -266,7 +266,7 @@
             <div class="component-form-global-title-AUMQBQ ibmplexsans-bold-charade-34px">Sign in</div>
           </div>
         </div>
-        <img class="base-C61RwL" src="{% static 'breakconnect/img/base@1x.png' %}" />
+        <img class="base-C61RwL" src="{% static 'breakconnect/img/base-54@1x.png' %}" />
         <div class="component-heade-ive-header-copy-C61RwL">
           <div class="component-heade-sponsive-header-CkLYbh">
             <div class="component-heade-ponsive-trigger-tHI9HX">
