--- a/breakconnect/templates/breakconnect/start-break.html
+++ b/breakconnect/templates/breakconnect/start-break.html
@@ -213,62 +213,56 @@
     <input type="hidden" id="anPageName" name="page" value="start-break" />
     <div class="container-center-horizontal">
       <div class="start-break screen">
-        <div class="group-1-C61RwL">
-          <div class="component-heade-lace-web-header-VyzZeT">
-            <div class="component-heade-lace-web-header-xkLem0">
-              <div class="component-heade-obal-navigation-WbxmQm">
-                <div class="component-heade-obal-navigation-3ozrLF">
-                  <div class="component-heade-global-nav-item-Ump7AH">
-                    <div class="component-heade-global-nav-item-M5iw2V ibmplexsans-normal-charade-16px">Account</div>
-                  </div>
-                  <div class="component-heade-global-nav-item-i5dl0p">
-                    <div class="component-heade-global-nav-item-Au3wLn ibmplexsans-normal-charade-16px">Schedule</div>
-                  </div>
-                  <div class="component-heade-global-nav-item-kQlRXx">
-                    <div class="component-heade-global-nav-item-QhSBwG ibmplexsans-normal-charade-16px">Catchups</div>
-                  </div>
+        <div class="component-heade-lace-web-header-C61RwL">
+          <div class="component-heade-lace-web-header-fKQF6J">
+            <div class="component-heade-obal-navigation-bdw52J">
+              <div class="component-heade-obal-navigation-W4A8Nw">
+                <div class="component-heade-global-nav-item-Sp4knt">
+                  <div class="component-heade-global-nav-item-a6SLZt ibmplexsans-normal-charade-16px">Account</div>
+                </div>
+                <div class="component-heade-global-nav-item-9115Dx">
+                  <div class="component-heade-global-nav-item-L5Zhlx ibmplexsans-normal-charade-16px">Schedule</div>
+                </div>
+                <div class="component-heade-global-nav-item-rDnUzp">
+                  <div class="component-heade-global-nav-item-aI4v3Y ibmplexsans-normal-charade-16px">Catchups</div>
                 </div>
               </div>
-              <div class="logo-type-dark-WbxmQm">
-                <div class="logo-type-dark-YpnHN8"></div>
-              </div>
             </div>
-          </div>
-          <div class="elements-avatar-round-profile-VyzZeT smart-layers-pointers">
-            <img class="base-aTOuep" src="{% static 'breakconnect/img/base-1@1x.png' %}" />
-            <img class="elements-avatar-round-profile-aTOuep" src="{% static 'breakconnect/img/elements-avatar-round-profile@1x.png' %}" />
+            <div class="logo-type-dark-bdw52J">
+              <div class="logo-type-dark-LeOJHj"></div>
+            </div>
           </div>
         </div>
         <div class="flex-row-C61RwL">
           <div class="repeat-grid-1-dXBp89">
             <div class="flex-col-LxlKCt">
-              <div class="x03-YHy6i4">
-                <div class="component-card-place-card-fill-Oa6pbv">
-                  <div class="component-card-place-card-fill-9GU6YE">
-                    <div class="base-wu1M9z">
-                      <img class="mask-VApPm7" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-VApPm7" src="{% static 'breakconnect/img/base-2@1x.png' %}" />
+              <div class="x0-YHy6i4">
+                <div class="component-card-place-card-fill-28ZVF9">
+                  <div class="component-card-place-card-fill-wqoxY9">
+                    <div class="base-TXW02p">
+                      <img class="mask-TqIh8R" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-TqIh8R" src="{% static 'breakconnect/img/base-5@1x.png' %}" />
                     </div>
-                    <div class="icon-wu1M9z">
-                      <div class="icon-more-xYnD2f">
-                        <img class="mask-E7awNf" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
-                        <img class="icon-more-E7awNf" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    <div class="icon-TXW02p">
+                      <div class="icon-more-99x4mx">
+                        <img class="mask-TzZZJw" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                        <img class="icon-more-TzZZJw" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="x23-YHy6i4">
-                <div class="component-card-place-card-fill-NTKGjV">
-                  <div class="component-card-place-card-fill-y3L0zy">
-                    <div class="base-wpxkDo">
-                      <img class="mask-EXQCrd" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-EXQCrd" src="{% static 'breakconnect/img/base-5@1x.png' %}" />
+              <div class="x2-YHy6i4">
+                <div class="component-card-place-card-fill-vz6a8j">
+                  <div class="component-card-place-card-fill-k9Lh1G">
+                    <div class="base-dvxUBI">
+                      <img class="mask-SD1T7x" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-SD1T7x" src="{% static 'breakconnect/img/base-7@1x.png' %}" />
                     </div>
-                    <div class="icon-wpxkDo">
-                      <div class="icon-more-fTzl2h">
-                        <img class="mask-CNj4Yh" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
-                        <img class="icon-more-CNj4Yh" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    <div class="icon-dvxUBI">
+                      <div class="icon-more-Uhxy8H">
+                        <img class="mask-nwIt3x" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                        <img class="icon-more-nwIt3x" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
@@ -276,33 +270,33 @@
               </div>
             </div>
             <div class="flex-col-cHeKPM">
-              <div class="x13-mlFh8x">
-                <div class="component-card-place-card-fill-MKT4V2">
-                  <div class="component-card-place-card-fill-QxVHsh">
-                    <div class="base-udi2QB">
-                      <img class="mask-hYCxic" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-hYCxic" src="{% static 'breakconnect/img/base-50@1x.png' %}" />
+              <div class="x1-mlFh8x">
+                <div class="component-card-place-card-fill-x5smE3">
+                  <div class="component-card-place-card-fill-E02ebJ">
+                    <div class="base-vSjiVV">
+                      <img class="mask-zO2sNj" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-zO2sNj" src="{% static 'breakconnect/img/base-6@1x.png' %}" />
                     </div>
-                    <div class="icon-udi2QB">
-                      <div class="icon-more-pfKvCu">
-                        <img class="mask-dHSCxp" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
-                        <img class="icon-more-dHSCxp" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    <div class="icon-vSjiVV">
+                      <div class="icon-more-KD5Aqk">
+                        <img class="mask-b232rX" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                        <img class="icon-more-b232rX" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="x32-mlFh8x">
-                <div class="component-card-place-card-fill-zoznYY">
-                  <div class="component-card-place-card-fill-uHism7">
-                    <div class="base-MnkzXL">
-                      <img class="mask-KTN09D" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-KTN09D" src="{% static 'breakconnect/img/base-6@1x.png' %}" />
+              <div class="x3-mlFh8x">
+                <div class="component-card-place-card-fill-ysp0Ow">
+                  <div class="component-card-place-card-fill-bHzgEn">
+                    <div class="base-if17OR">
+                      <img class="mask-xUkfLe" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-xUkfLe" src="{% static 'breakconnect/img/base-8@1x.png' %}" />
                     </div>
-                    <div class="icon-MnkzXL">
-                      <div class="icon-more-UpTd2x">
-                        <img class="mask-2HZVUw" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
-                        <img class="icon-more-2HZVUw" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    <div class="icon-if17OR">
+                      <div class="icon-more-m549yG">
+                        <img class="mask-rXMRyA" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                        <img class="icon-more-rXMRyA" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
@@ -313,7 +307,7 @@
           <div class="group-2-dXBp89">
             <div class="component-chart-ace-donut-chart-P4lque">
               <div class="component-chart-ace-donut-chart-OYb3hV">
-                <img class="base-lQM3Eg" src="{% static 'breakconnect/img/base-8@1x.png' %}" />
+                <img class="base-lQM3Eg" src="{% static 'breakconnect/img/base-9@1x.png' %}" />
                 <div class="description-lQM3Eg">What have you been up to recently?</div>
                 <div class="component-chart-ator-horizontal-lQM3Eg">
                   <div class="component-chart-ator-horizontal-rxTDR2"></div>
@@ -333,7 +327,7 @@
             </div>
             <div class="controls-button-e-accent-normal-P4lque smart-layers-pointers">
               <div class="controls-button-e-accent-normal-vogk1Y">
-                <img class="base-WYBrCY" src="{% static 'breakconnect/img/base-56@1x.png' %}" />
+                <img class="base-WYBrCY" src="{% static 'breakconnect/img/base-10@1x.png' %}" />
                 <div class="button-WYBrCY ibmplexsans-medium-aqua-haze-16px">Start</div>
               </div>
             </div>
@@ -341,11 +335,11 @@
               <div class="controls-place-stepper-u2CKJJ">
                 <div class="controls-stepper-dOwU7u">
                   <div class="controls-stepper-normal-SN5vpI">
-                    <img class="base-4wKRxZ" src="{% static 'breakconnect/img/base-57@1x.png' %}" />
+                    <img class="base-4wKRxZ" src="{% static 'breakconnect/img/base-11@1x.png' %}" />
                     <div class="lt-4wKRxZ">
                       <div class="icon-ESqxFN">
                         <div class="icon-minus-6efZEE">
-                          <img class="mask-UH4pzt" src="{% static 'breakconnect/img/mask-57@1x.png' %}" />
+                          <img class="mask-UH4pzt" src="{% static 'breakconnect/img/mask-13@1x.png' %}" />
                           <img class="icon-minus-UH4pzt" src="{% static 'breakconnect/img/icon-minus@1x.png' %}" />
                         </div>
                       </div>
@@ -353,7 +347,7 @@
                     <div class="rt-4wKRxZ">
                       <div class="icon-y2VQZb">
                         <div class="icon-add-0Szicx">
-                          <img class="mask-dBTYUb" src="{% static 'breakconnect/img/mask-58@1x.png' %}" />
+                          <img class="mask-dBTYUb" src="{% static 'breakconnect/img/mask-14@1x.png' %}" />
                           <img class="icon-add-dBTYUb" src="{% static 'breakconnect/img/icon-add@1x.png' %}" />
                         </div>
                       </div>
@@ -367,11 +361,11 @@
               <div class="controls-place-stepper-4P7gRO">
                 <div class="controls-stepper-7MW3uo">
                   <div class="controls-stepper-pressed-right-jAnAUX">
-                    <img class="base-cYb587" src="{% static 'breakconnect/img/base-57@1x.png' %}" />
+                    <img class="base-cYb587" src="{% static 'breakconnect/img/base-11@1x.png' %}" />
                     <div class="lt-cYb587">
                       <div class="icon-tFcvXE">
                         <div class="icon-minus-e0LLXt">
-                          <img class="mask-W5wxfd" src="{% static 'breakconnect/img/mask-57@1x.png' %}" />
+                          <img class="mask-W5wxfd" src="{% static 'breakconnect/img/mask-13@1x.png' %}" />
                           <img class="icon-minus-W5wxfd" src="{% static 'breakconnect/img/icon-minus@1x.png' %}" />
                         </div>
                       </div>
@@ -379,7 +373,7 @@
                     <div class="rt-cYb587">
                       <div class="icon-oEL1xA">
                         <div class="icon-add-VzRsJX">
-                          <img class="mask-fWFZVo" src="{% static 'breakconnect/img/mask-58@1x.png' %}" />
+                          <img class="mask-fWFZVo" src="{% static 'breakconnect/img/mask-14@1x.png' %}" />
                           <img class="icon-add-fWFZVo" src="{% static 'breakconnect/img/icon-add-1@1x.png' %}" />
                         </div>
                       </div>
@@ -395,7 +389,7 @@
               <div class="controls-place-text-area-9Gc4it">
                 <div class="controls-text-area-2OxO7H">
                   <div class="controls-text-area-placeholder-kwfwvO">
-                    <img class="base-0PYIjK" src="{% static 'breakconnect/img/base-63@1x.png' %}" />
+                    <img class="base-0PYIjK" src="{% static 'breakconnect/img/base-17@1x.png' %}" />
                     <div class="placeholder-0PYIjK ibmplexsans-normal-cerulean-frost-16px">
                       I just bought a new telescope, I&#39;ve been dabbling in astrophotography recently!
                     </div>
