--- a/breakconnect/templates/breakconnect/current-chat.html
+++ b/breakconnect/templates/breakconnect/current-chat.html
@@ -213,33 +213,24 @@
     <input type="hidden" id="anPageName" name="page" value="current-chat" />
     <div class="container-center-horizontal">
       <div class="current-chat screen">
-        <div class="group-4-C61RwL">
-          <div class="component-heade-lace-web-header-KOsP6k">
-            <div class="component-heade-lace-web-header-0P1G6P">
-              <div class="component-heade-obal-navigation-GWtGSt">
-                <div class="component-heade-obal-navigation-USFZRl">
-                  <div class="component-heade-global-nav-item-jyKMGe">
-                    <div class="component-heade-global-nav-item-7zUZrk ibmplexsans-normal-charade-16px">Account</div>
-                  </div>
-                  <div class="component-heade-global-nav-item-hZRdHy">
-                    <div class="component-heade-global-nav-item-HJjipq ibmplexsans-normal-charade-16px">Schedule</div>
-                  </div>
-                  <div class="component-heade-global-nav-item-Pwizlm">
-                    <div class="component-heade-global-nav-item-v0CRje ibmplexsans-normal-charade-16px">Catchups</div>
-                  </div>
+        <div class="component-heade-lace-web-header-C61RwL">
+          <div class="component-heade-lace-web-header-fKQF6J">
+            <div class="component-heade-obal-navigation-bdw52J">
+              <div class="component-heade-obal-navigation-W4A8Nw">
+                <div class="component-heade-global-nav-item-Sp4knt">
+                  <div class="component-heade-global-nav-item-a6SLZt ibmplexsans-normal-charade-16px">Account</div>
+                </div>
+                <div class="component-heade-global-nav-item-9115Dx">
+                  <div class="component-heade-global-nav-item-L5Zhlx ibmplexsans-normal-charade-16px">Schedule</div>
+                </div>
+                <div class="component-heade-global-nav-item-rDnUzp">
+                  <div class="component-heade-global-nav-item-aI4v3Y ibmplexsans-normal-charade-16px">Catchups</div>
                 </div>
               </div>
-              <div class="logo-type-dark-GWtGSt">
-                <div class="logo-type-dark-vx3nh7"></div>
-              </div>
             </div>
-          </div>
-          <div class="elements-avatar-round-profile-KOsP6k">
-            <img class="base-F523xW" src="{% static 'breakconnect/img/base-1@1x.png' %}" />
-            <img
-              class="elements-avatar-round-profile-F523xW smart-layers-pointers"
-              src="{% static 'breakconnect/img/elements-avatar-round-profile@1x.png' %}"
-            />
+            <div class="logo-type-dark-bdw52J">
+              <div class="logo-type-dark-LeOJHj"></div>
+            </div>
           </div>
         </div>
         <div class="flex-row-C61RwL">
@@ -249,29 +240,29 @@
                 <div class="component-card-place-card-fill-82GOoX smart-layers-pointers">
                   <div class="component-card-place-card-fill-xfS0EV">
                     <div class="base-T2n7m7">
-                      <img class="mask-xyB2zp" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-xyB2zp" src="{% static 'breakconnect/img/base-2@1x.png' %}" />
+                      <img class="mask-xyB2zp" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-xyB2zp" src="{% static 'breakconnect/img/base-5@1x.png' %}" />
                     </div>
                     <div class="icon-T2n7m7">
                       <div class="icon-more-Si6b2Z">
-                        <img class="mask-vu4kDf" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
+                        <img class="mask-vu4kDf" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
                         <img class="icon-more-vu4kDf" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="x22-YHy6i4">
-                <div class="component-card-place-card-fill-EaXLBm smart-layers-pointers">
-                  <div class="component-card-place-card-fill-XJ3yhz">
-                    <div class="base-wlDaJx">
-                      <img class="mask-ewCxtx" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-ewCxtx" src="{% static 'breakconnect/img/base-5@1x.png' %}" />
+              <div class="x21-YHy6i4">
+                <div class="component-card-place-card-fill-kp5Q1m smart-layers-pointers">
+                  <div class="component-card-place-card-fill-a16coa">
+                    <div class="base-gZkxjN">
+                      <img class="mask-n6SZaN" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-n6SZaN" src="{% static 'breakconnect/img/base-7@1x.png' %}" />
                     </div>
-                    <div class="icon-wlDaJx">
-                      <div class="icon-more-KwxQxu">
-                        <img class="mask-xjJ49D" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
-                        <img class="icon-more-xjJ49D" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    <div class="icon-gZkxjN">
+                      <div class="icon-more-oOtETB">
+                        <img class="mask-tVWZhS" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                        <img class="icon-more-tVWZhS" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
@@ -279,25 +270,25 @@
               </div>
             </div>
             <div class="flex-col-cHeKPM">
-              <div class="x12-mlFh8x">
-                <div class="component-card-place-card-fill-Eyzx5u smart-layers-pointers">
-                  <div class="component-card-place-card-fill-bvxr64">
-                    <div class="base-vwdeES">
-                      <img class="mask-2xdTx2" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-2xdTx2" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
+              <div class="x11-mlFh8x">
+                <div class="component-card-place-card-fill-ehIv4N smart-layers-pointers">
+                  <div class="component-card-place-card-fill-z0N5zy">
+                    <div class="base-xoUFZs">
+                      <img class="mask-FRjgfd" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-FRjgfd" src="{% static 'breakconnect/img/base-29@1x.png' %}" />
                     </div>
-                    <div class="component-card-bal-light-title-vwdeES">
-                      <div class="component-card-bal-light-title-COwMXj ibmplexsans-bold-white-28px">Mary</div>
+                    <div class="component-card-bal-light-title-xoUFZs">
+                      <div class="component-card-bal-light-title-9WxT72 ibmplexsans-bold-white-28px">Mary</div>
                     </div>
-                    <div class="component-card-ght-description-vwdeES">
-                      <div class="component-card-ght-description-JLWJVv ibmplexsans-normal-white-16px">
+                    <div class="component-card-ght-description-xoUFZs">
+                      <div class="component-card-ght-description-eMwZgX ibmplexsans-normal-white-16px">
                         My son Jim won a science fair at school!
                       </div>
                     </div>
-                    <div class="icon-vwdeES">
-                      <div class="icon-more-aGfvKJ">
-                        <img class="mask-Hkkn1q" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
-                        <img class="icon-more-Hkkn1q" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    <div class="icon-xoUFZs">
+                      <div class="icon-more-dCq1Uc">
+                        <img class="mask-d2NH2w" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                        <img class="icon-more-d2NH2w" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
@@ -307,12 +298,12 @@
                 <div class="component-card-place-card-fill-nZXmhg smart-layers-pointers">
                   <div class="component-card-place-card-fill-IexxeY">
                     <div class="base-K5ycrV">
-                      <img class="mask-cJbakx" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-cJbakx" src="{% static 'breakconnect/img/base-6@1x.png' %}" />
+                      <img class="mask-cJbakx" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-cJbakx" src="{% static 'breakconnect/img/base-8@1x.png' %}" />
                     </div>
                     <div class="icon-K5ycrV">
                       <div class="icon-more-GZVPyo">
-                        <img class="mask-b52LyA" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
+                        <img class="mask-b52LyA" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
                         <img class="icon-more-b52LyA" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
@@ -325,7 +316,7 @@
             <div class="group-3-h7LeMT">
               <div class="component-chart-ace-donut-chart-r8T6eX">
                 <div class="component-chart-ace-donut-chart-Bxu9WK">
-                  <img class="base-xplgac" src="{% static 'breakconnect/img/base-8@1x.png' %}" />
+                  <img class="base-xplgac" src="{% static 'breakconnect/img/base-9@1x.png' %}" />
                   <div class="component-chart-ator-horizontal-xplgac">
                     <div class="component-chart-ator-horizontal-G0FEoG"></div>
                   </div>
@@ -345,7 +336,7 @@
               <div class="elements-chat-b-ry-bottom-right-r8T6eX">
                 <div class="elements-chat-b-ry-bottom-right-GSqK62">
                   <img class="caret-j05Tn7" src="{% static 'breakconnect/img/caret@1x.png' %}" />
-                  <img class="base-j05Tn7" src="{% static 'breakconnect/img/base-10@1x.png' %}" />
+                  <img class="base-j05Tn7" src="{% static 'breakconnect/img/base-34@1x.png' %}" />
                   <div class="chat-message-j05Tn7">
                     My congrats to Jim! That&#39;s awesome, you must be pretty proud
                   </div>
@@ -354,7 +345,7 @@
               <div class="elements-chat-b-ght-bottom-left-r8T6eX">
                 <div class="elements-chat-b-ght-bottom-left-xTXXCH">
                   <img class="caret-L2noQf" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
-                  <img class="base-L2noQf" src="{% static 'breakconnect/img/base-11@1x.png' %}" />
+                  <img class="base-L2noQf" src="{% static 'breakconnect/img/base-35@1x.png' %}" />
                   <div class="chat-message-L2noQf ibmplexsans-normal-storm-gray-14px">
                     Haha I&#39;ll pass it on! I am! He&#39;s been working so hard on it for ages
                   </div>
@@ -362,7 +353,7 @@
               </div>
               <div class="elements-popover-accent-top-r8T6eX">
                 <div class="elements-popover-accent-top-C8wgmx">
-                  <img class="base-ZBrjcj" src="{% static 'breakconnect/img/base-12@1x.png' %}" />
+                  <img class="base-ZBrjcj" src="{% static 'breakconnect/img/base-36@1x.png' %}" />
                   <img class="caret-ZBrjcj" src="{% static 'breakconnect/img/caret-2@1x.png' %}" />
                   <div class="info-ZBrjcj">
                     <div class="title-nLc2dY">My son Jim won a science fair at school!</div>
@@ -372,14 +363,14 @@
               <div class="elements-chat-b-ry-bottom-right-nCuMbC">
                 <div class="elements-chat-b-ry-bottom-right-yBTHBS">
                   <img class="caret-QtQpAB" src="{% static 'breakconnect/img/caret@1x.png' %}" />
-                  <img class="base-QtQpAB" src="{% static 'breakconnect/img/base-13@1x.png' %}" />
+                  <img class="base-QtQpAB" src="{% static 'breakconnect/img/base-37@1x.png' %}" />
                   <div class="chat-message-QtQpAB">What area of science is he interested in?</div>
                 </div>
               </div>
               <div class="elements-chat-b-ght-bottom-left-nCuMbC">
                 <div class="elements-chat-b-ght-bottom-left-akCis6">
                   <img class="caret-z8qb6t" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
-                  <img class="base-z8qb6t" src="{% static 'breakconnect/img/base-14@1x.png' %}" />
+                  <img class="base-z8qb6t" src="{% static 'breakconnect/img/base-38@1x.png' %}" />
                   <div class="chat-message-z8qb6t ibmplexsans-normal-storm-gray-14px">
                     Paleontology! He&#39;s absolutely fascinated by dinosaurs at the moment
                   </div>
@@ -387,7 +378,7 @@
               </div>
               <div class="controls-text-field-r8T6eX">
                 <div class="controls-text-field-normal-agSvSc">
-                  <img class="base-hzKeH2" src="{% static 'breakconnect/img/base-15@1x.png' %}" />
+                  <img class="base-hzKeH2" src="{% static 'breakconnect/img/base-39@1x.png' %}" />
                   <div class="placeholder-hzKeH2 ibmplexsans-normal-cerulean-frost-16px">
                     That&#39;s awesome I always loved Dinosaurs as a kid too!
                   </div>
@@ -396,7 +387,7 @@
             </div>
             <div class="icon-comment-h7LeMT smart-layers-pointers">
               <div class="icon-comment-tftWem">
-                <img class="mask-FOidCs" src="{% static 'breakconnect/img/mask-18@1x.png' %}" />
+                <img class="mask-FOidCs" src="{% static 'breakconnect/img/mask-30@1x.png' %}" />
                 <img class="icon-comment-FOidCs" src="{% static 'breakconnect/img/icon-comment@1x.png' %}" />
               </div>
             </div>
