--- a/breakconnect/templates/breakconnect/sign-up.html
+++ b/breakconnect/templates/breakconnect/sign-up.html
@@ -1,4 +1,4 @@
-}{% load static %}
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -236,7 +236,7 @@
         </div>
         <div class="component-form-place-sign-up-C61RwL">
           <div class="component-form-place-sign-up-xVcXBI">
-            <img class="base-x2VZAn" src="{% static 'breakconnect/img/base-22@1x.png' %}" />
+            <img class="base-x2VZAn" src="{% static 'breakconnect/img/base-21@1x.png' %}" />
             <div class="controls-button-x2VZAn smart-layers-pointers">
               <div class="controls-button-e-accent-normal-UC2Ss6">
                 <img class="base-qEpnVR" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
@@ -247,7 +247,7 @@
               <div class="controls-place-checkbox-ynI4os">
                 <div class="controls-checkbox-YqTEiH">
                   <div class="controls-checkbox-normal-lESxtH">
-                    <img class="base-pXuHzH" src="{% static 'breakconnect/img/base-24@1x.png' %}" />
+                    <img class="base-pXuHzH" src="{% static 'breakconnect/img/base-23@1x.png' %}" />
                   </div>
                 </div>
                 <div class="controls-global-label-YqTEiH">
