--- a/breakconnect/templates/breakconnect/start-chat.html
+++ b/breakconnect/templates/breakconnect/start-chat.html
@@ -213,81 +213,72 @@
     <input type="hidden" id="anPageName" name="page" value="start-chat" />
     <div class="container-center-horizontal">
       <div class="start-chat screen">
-        <div class="group-6-C61RwL">
-          <div class="component-heade-lace-web-header-PIEh7b">
-            <div class="component-heade-lace-web-header-upNTzx">
-              <div class="component-heade-obal-navigation-lYzOxP">
-                <div class="component-heade-obal-navigation-RpxB3x">
-                  <div class="component-heade-global-nav-item-vsUOeo">
-                    <div class="component-heade-global-nav-item-AxwBbr ibmplexsans-normal-charade-16px">Account</div>
-                  </div>
-                  <div class="component-heade-global-nav-item-dY8Qxi">
-                    <div class="component-heade-global-nav-item-HF4mYH ibmplexsans-normal-charade-16px">Schedule</div>
-                  </div>
-                  <div class="component-heade-global-nav-item-uoPVLx">
-                    <div class="component-heade-global-nav-item-tLXuBf ibmplexsans-normal-charade-16px">Catchups</div>
-                  </div>
+        <div class="component-heade-lace-web-header-C61RwL">
+          <div class="component-heade-lace-web-header-fKQF6J">
+            <div class="component-heade-obal-navigation-bdw52J">
+              <div class="component-heade-obal-navigation-W4A8Nw">
+                <div class="component-heade-global-nav-item-Sp4knt">
+                  <div class="component-heade-global-nav-item-a6SLZt ibmplexsans-normal-charade-16px">Account</div>
+                </div>
+                <div class="component-heade-global-nav-item-9115Dx">
+                  <div class="component-heade-global-nav-item-L5Zhlx ibmplexsans-normal-charade-16px">Schedule</div>
+                </div>
+                <div class="component-heade-global-nav-item-rDnUzp">
+                  <div class="component-heade-global-nav-item-aI4v3Y ibmplexsans-normal-charade-16px">Catchups</div>
                 </div>
               </div>
-              <div class="logo-type-dark-lYzOxP">
-                <div class="logo-type-dark-Tv4Nax"></div>
-              </div>
             </div>
-          </div>
-          <div class="elements-avatar-round-profile-PIEh7b">
-            <img class="base-7WZ7rH" src="{% static 'breakconnect/img/base-1@1x.png' %}" />
-            <img
-              class="elements-avatar-round-profile-7WZ7rH smart-layers-pointers"
-              src="{% static 'breakconnect/img/elements-avatar-round-profile@1x.png' %}"
-            />
+            <div class="logo-type-dark-bdw52J">
+              <div class="logo-type-dark-LeOJHj"></div>
+            </div>
           </div>
         </div>
         <div class="flex-row-C61RwL">
           <div class="repeat-grid-1-dXBp89">
             <div class="flex-col-LxlKCt">
-              <div class="x0-YHy6i4">
-                <div class="component-card-place-card-fill-28ZVF9 smart-layers-pointers">
-                  <div class="component-card-place-card-fill-wqoxY9">
-                    <div class="base-TXW02p">
-                      <img class="mask-TqIh8R" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-TqIh8R" src="{% static 'breakconnect/img/base-17@1x.png' %}" />
+              <div class="x03-YHy6i4">
+                <div class="component-card-place-card-fill-Oa6pbv smart-layers-pointers">
+                  <div class="component-card-place-card-fill-9GU6YE">
+                    <div class="base-wu1M9z">
+                      <img class="mask-VApPm7" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-VApPm7" src="{% static 'breakconnect/img/base-42@1x.png' %}" />
                     </div>
-                    <div class="component-card-bal-light-title-TXW02p">
-                      <div class="component-card-bal-light-title-OaScnd ibmplexsans-bold-white-28px">Mark</div>
+                    <div class="component-card-bal-light-title-wu1M9z">
+                      <div class="component-card-bal-light-title-uZscfi ibmplexsans-bold-white-28px">Mark</div>
                     </div>
-                    <div class="component-card-ght-description-TXW02p">
-                      <div class="component-card-ght-description-Tgxtpr ibmplexsans-normal-white-16px">
+                    <div class="component-card-ght-description-wu1M9z">
+                      <div class="component-card-ght-description-p6c4A6 ibmplexsans-normal-white-16px">
                         I just bought a new car!
                       </div>
                     </div>
-                    <div class="icon-TXW02p">
-                      <div class="icon-more-99x4mx">
-                        <img class="mask-TzZZJw" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
-                        <img class="icon-more-TzZZJw" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    <div class="icon-wu1M9z">
+                      <div class="icon-more-xYnD2f">
+                        <img class="mask-E7awNf" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                        <img class="icon-more-E7awNf" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="x2-YHy6i4">
-                <div class="component-card-place-card-fill-vz6a8j smart-layers-pointers">
-                  <div class="component-card-place-card-fill-k9Lh1G">
-                    <div class="base-dvxUBI">
-                      <img class="mask-SD1T7x" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-SD1T7x" src="{% static 'breakconnect/img/base-20@1x.png' %}" />
+              <div class="x22-YHy6i4">
+                <div class="component-card-place-card-fill-EaXLBm smart-layers-pointers">
+                  <div class="component-card-place-card-fill-XJ3yhz">
+                    <div class="base-wlDaJx">
+                      <img class="mask-ewCxtx" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-ewCxtx" src="{% static 'breakconnect/img/base-44@1x.png' %}" />
                     </div>
-                    <div class="component-card-bal-light-title-dvxUBI">
-                      <div class="component-card-bal-light-title-BsPqai ibmplexsans-bold-white-28px">Samantha</div>
+                    <div class="component-card-bal-light-title-wlDaJx">
+                      <div class="component-card-bal-light-title-RKAI3L ibmplexsans-bold-white-28px">Samantha</div>
                     </div>
-                    <div class="component-card-ght-description-dvxUBI">
-                      <div class="component-card-ght-description-1a0L0c ibmplexsans-normal-white-16px">
+                    <div class="component-card-ght-description-wlDaJx">
+                      <div class="component-card-ght-description-02HqkJ ibmplexsans-normal-white-16px">
                         My brother just got his PHD!
                       </div>
                     </div>
-                    <div class="icon-dvxUBI">
-                      <div class="icon-more-Uhxy8H">
-                        <img class="mask-nwIt3x" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
-                        <img class="icon-more-nwIt3x" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    <div class="icon-wlDaJx">
+                      <div class="icon-more-KwxQxu">
+                        <img class="mask-xjJ49D" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                        <img class="icon-more-xjJ49D" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
@@ -295,49 +286,49 @@
               </div>
             </div>
             <div class="flex-col-cHeKPM">
-              <div class="x1-mlFh8x">
-                <div class="component-card-place-card-fill-x5smE3 smart-layers-pointers">
-                  <div class="component-card-place-card-fill-E02ebJ">
-                    <div class="base-vSjiVV">
-                      <img class="mask-zO2sNj" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-zO2sNj" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
+              <div class="x12-mlFh8x">
+                <div class="component-card-place-card-fill-Eyzx5u smart-layers-pointers">
+                  <div class="component-card-place-card-fill-bvxr64">
+                    <div class="base-vwdeES">
+                      <img class="mask-2xdTx2" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-2xdTx2" src="{% static 'breakconnect/img/base-29@1x.png' %}" />
                     </div>
-                    <div class="component-card-bal-light-title-vSjiVV">
-                      <div class="component-card-bal-light-title-Nap4a9 ibmplexsans-bold-white-28px">Mary</div>
+                    <div class="component-card-bal-light-title-vwdeES">
+                      <div class="component-card-bal-light-title-COwMXj ibmplexsans-bold-white-28px">Mary</div>
                     </div>
-                    <div class="component-card-ght-description-vSjiVV">
-                      <div class="component-card-ght-description-bS6Lhk ibmplexsans-normal-white-16px">
+                    <div class="component-card-ght-description-vwdeES">
+                      <div class="component-card-ght-description-JLWJVv ibmplexsans-normal-white-16px">
                         My son Jim won a science fair at school!
                       </div>
                     </div>
-                    <div class="icon-vSjiVV">
-                      <div class="icon-more-KD5Aqk">
-                        <img class="mask-b232rX" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
-                        <img class="icon-more-b232rX" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    <div class="icon-vwdeES">
+                      <div class="icon-more-aGfvKJ">
+                        <img class="mask-Hkkn1q" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                        <img class="icon-more-Hkkn1q" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="x3-mlFh8x">
-                <div class="component-card-place-card-fill-ysp0Ow smart-layers-pointers">
-                  <div class="component-card-place-card-fill-bHzgEn">
-                    <div class="base-if17OR">
-                      <img class="mask-xUkfLe" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                      <img class="base-xUkfLe" src="{% static 'breakconnect/img/base-21@1x.png' %}" />
+              <div class="x32-mlFh8x">
+                <div class="component-card-place-card-fill-zoznYY smart-layers-pointers">
+                  <div class="component-card-place-card-fill-uHism7">
+                    <div class="base-MnkzXL">
+                      <img class="mask-KTN09D" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                      <img class="base-KTN09D" src="{% static 'breakconnect/img/base-45@1x.png' %}" />
                     </div>
-                    <div class="component-card-bal-light-title-if17OR">
-                      <div class="component-card-bal-light-title-gBNoze ibmplexsans-bold-white-28px">John</div>
+                    <div class="component-card-bal-light-title-MnkzXL">
+                      <div class="component-card-bal-light-title-DBdwPk ibmplexsans-bold-white-28px">John</div>
                     </div>
-                    <div class="component-card-ght-description-if17OR">
-                      <div class="component-card-ght-description-axsghZ ibmplexsans-normal-white-16px">
+                    <div class="component-card-ght-description-MnkzXL">
+                      <div class="component-card-ght-description-pxZLy0 ibmplexsans-normal-white-16px">
                         I just went rock climbing on the weekend!
                       </div>
                     </div>
-                    <div class="icon-if17OR">
-                      <div class="icon-more-m549yG">
-                        <img class="mask-rXMRyA" src="{% static 'breakconnect/img/mask-2@1x.png' %}" />
-                        <img class="icon-more-rXMRyA" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
+                    <div class="icon-MnkzXL">
+                      <div class="icon-more-UpTd2x">
+                        <img class="mask-2HZVUw" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                        <img class="icon-more-2HZVUw" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
                   </div>
@@ -348,7 +339,7 @@
           <div class="group-5-dXBp89">
             <div class="component-chart-ace-donut-chart-wbR61n">
               <div class="component-chart-ace-donut-chart-grpQ9Z">
-                <img class="base-tqJOii" src="{% static 'breakconnect/img/base-8@1x.png' %}" />
+                <img class="base-tqJOii" src="{% static 'breakconnect/img/base-9@1x.png' %}" />
                 <div class="description-tqJOii">Don&#39;t be shy, choose a co-worker to start a chat!</div>
                 <div class="component-chart-ator-horizontal-tqJOii">
                   <div class="component-chart-ator-horizontal-xVJ1U2"></div>
@@ -367,7 +358,7 @@
               </div>
             </div>
             <div class="elements-popover-accent-top-wbR61n">
-              <img class="base-6GEbXi" src="{% static 'breakconnect/img/base-24@1x.png' %}" />
+              <img class="base-6GEbXi" src="{% static 'breakconnect/img/base-47@1x.png' %}" />
               <img class="caret-6GEbXi" src="{% static 'breakconnect/img/caret-2@1x.png' %}" />
               <div class="info-6GEbXi">
                 <div class="title-f1z6wx">
@@ -376,43 +367,43 @@
               </div>
             </div>
             <div class="repeat-grid-2-wbR61n">
-              <div class="x01-JXnxfe">
-                <div class="elements-avatar-round-profile-c8cxBw">
-                  <img class="base-pNeQop" src="{% static 'breakconnect/img/base-25@1x.png' %}" />
+              <div class="x04-JXnxfe">
+                <div class="elements-avatar-round-profile-Gw4LiT">
+                  <img class="base-AA4Uuz" src="{% static 'breakconnect/img/base-48@1x.png' %}" />
                 </div>
-                <div class="elements-chat-b-ght-bottom-left-c8cxBw smart-layers-pointers">
-                  <div class="elements-chat-b-ght-bottom-left-zABCak">
-                    <img class="caret-VxnswS" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
-                    <img class="base-VxnswS" src="{% static 'breakconnect/img/base-26@1x.png' %}" />
-                    <div class="chat-message-VxnswS ibmplexsans-normal-storm-gray-14px">
+                <div class="elements-chat-b-ght-bottom-left-Gw4LiT smart-layers-pointers">
+                  <div class="elements-chat-b-ght-bottom-left-skaqMR">
+                    <img class="caret-x5E8JZ" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
+                    <img class="base-x5E8JZ" src="{% static 'breakconnect/img/base-49@1x.png' %}" />
+                    <div class="chat-message-x5E8JZ ibmplexsans-normal-storm-gray-14px">
                       Damn man that&#39;s dope, do you have a tracking mount?
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="x11-JXnxfe">
-                <div class="elements-avatar-round-profile-xVnjyx">
-                  <img class="base-FAOGO6" src="{% static 'breakconnect/img/base-27@1x.png' %}" />
+              <div class="x13-JXnxfe">
+                <div class="elements-avatar-round-profile-4eDQ5s">
+                  <img class="base-B3AYgk" src="{% static 'breakconnect/img/base-50@1x.png' %}" />
                 </div>
-                <div class="elements-chat-b-ght-bottom-left-xVnjyx smart-layers-pointers">
-                  <div class="elements-chat-b-ght-bottom-left-yWvJaK">
-                    <img class="caret-U2zk6H" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
-                    <img class="base-U2zk6H" src="{% static 'breakconnect/img/base-26@1x.png' %}" />
-                    <div class="chat-message-U2zk6H ibmplexsans-normal-storm-gray-14px">
+                <div class="elements-chat-b-ght-bottom-left-4eDQ5s smart-layers-pointers">
+                  <div class="elements-chat-b-ght-bottom-left-YmGiZP">
+                    <img class="caret-lXRp1i" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
+                    <img class="base-lXRp1i" src="{% static 'breakconnect/img/base-49@1x.png' %}" />
+                    <div class="chat-message-lXRp1i ibmplexsans-normal-storm-gray-14px">
                       Woah so cool, do you have any photos I can see?
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="x21-JXnxfe">
-                <div class="elements-avatar-round-profile-w1lxjO">
-                  <img class="base-iEyb5P" src="{% static 'breakconnect/img/base-29@1x.png' %}" />
+              <div class="x23-JXnxfe">
+                <div class="elements-avatar-round-profile-MOyXne">
+                  <img class="base-wWGeFx" src="{% static 'breakconnect/img/base-52@1x.png' %}" />
                 </div>
-                <div class="elements-chat-b-ght-bottom-left-w1lxjO smart-layers-pointers">
-                  <div class="elements-chat-b-ght-bottom-left-Y15xvq">
-                    <img class="caret-53F8Up" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
-                    <img class="base-53F8Up" src="{% static 'breakconnect/img/base-30@1x.png' %}" />
-                    <div class="chat-message-53F8Up ibmplexsans-normal-storm-gray-14px">
+                <div class="elements-chat-b-ght-bottom-left-MOyXne smart-layers-pointers">
+                  <div class="elements-chat-b-ght-bottom-left-CmqYet">
+                    <img class="caret-xE5tIi" src="{% static 'breakconnect/img/caret-1@1x.png' %}" />
+                    <img class="base-xE5tIi" src="{% static 'breakconnect/img/base-53@1x.png' %}" />
+                    <div class="chat-message-xE5tIi ibmplexsans-normal-storm-gray-14px">
                       How have you been?! Wanna catch up for a beer over zoom after work?
                     </div>
                   </div>
